
2019-01-04  Edwrd Hart <edward.dan.hart@gmail.com>

	* mlio.c: added JSON GENERATE.

2019-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* xml.c: renamed file to mlio.c and cob_..._xmlio to cob_..._mlio.

2019-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: check for definition of non-portable EDEADLK before using it,
	  possibly using EDEADLOCK instead

2018-12-31  Simon Sobisch <simonsobisch@gnu.org>

	* system.def, common.h: new entry EXTFH / cob_sys_extfh
	* fileio.c (cob_sys_extfh): new function used as COBOL wrapper for
	  EXTFH entry to prevent warnings about FCD3 structure, linking issues
	  and providing additional checks
	* fileio.c (EXTFH): return file code 9/161 for different errors
	* fileio.c (EXTFH), common.h: minimal implementation for ORG_DETERMINE
	  (will only work if the same FCD was already used with the same file)
	* common.h (FCD3): adjustment to xfhfcd3.cpy
	* common.h (KDB): split KDB_KEY to separate definition

2018-12-30  Ron Norman <rjn@inglenet.com>

	* fileio.c (copy_file_to_fcd): Corrected memory allocation of EXTFH
	  data structs

2018-12-19  Ron Norman <rjn@inglenet.com>

	fixing EXTFH bug #561, part II
	* fileio.c (lineseq_write): handle EXTFH with write options not set
	* fileio.c (copy_file_to_fcd, copy_fcd_to_file): added code for
	  LINE SEQUENTIAL flags for EXTFH interface
	  *Note: deactivated until file_features are merged from rw-branch*

2018-12-13  Ron Norman <rjn@inglenet.com>

	fixing EXTFH bug #561, part I
	* fileio.c (update_file_to_fcd): adjustments for setting openMode
	* fileio.c (copy_fcd_to_file): fixed coding error if file has no keys

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c (cob_intr_content_of): fixed unlikely case of empty *srcfield
	  not raising EC-DATA-PTR-NULL
	* intrinsic.c (cob_intr_content_length, cob_intr_content_of):
	  minor refactoring
	* intrinsic.c (decimal_places_for_seconds): changed parameter to