@@ -2,6 +2,8 @@
 2019-01-04  Edwrd Hart <edward.dan.hart@gmail.com>
 
 	* mlio.c: added JSON GENERATE.
+	* common.h, common.c: replaced COB_FERROR_* #define's with
+	  cob_fatal_error enum.
 
 2019-01-03  Edward Hart <edward.dan.hart@gmail.com>
 
